[gd_scene load_steps=32 format=3 uid="uid://bjilndyqcty10"]

[ext_resource type="Texture2D" uid="uid://egymrbxh2fas" path="res://Сцени/1этажналево.png" id="1_4imed"]
[ext_resource type="Script" uid="uid://u1tlf3f5jp2u" path="res://player.gd" id="2_flltc"]
[ext_resource type="Script" uid="uid://ba4bhxop01ags" path="res://Сцени/right_wall.gd" id="2_t6sle"]
[ext_resource type="Texture2D" uid="uid://dvybl5hbdxwu3" path="res://Герои/hero.png" id="3_eui5g"]
[ext_resource type="Script" uid="uid://c4m7tt7vgvo28" path="res://Сцени/toilet_door.gd" id="4_eui5g"]
[ext_resource type="Script" uid="uid://b5nhekwsgec4h" path="res://Сцени/closed_door.gd" id="6_0jltq"]
[ext_resource type="Script" uid="uid://b1d2j4s8nvv54" path="res://Сцени/arrow_up.gd" id="6_t6sle"]
[ext_resource type="Script" uid="uid://bwcmxhtopp56c" path="res://Сцени/hud1.gd" id="8_0jltq"]
[ext_resource type="Texture2D" uid="uid://wa6nwavcg2au" path="res://Другое/Туалет.jpg" id="9_0jltq"]
[ext_resource type="Script" uid="uid://si748jrbbned" path="res://Сцени/toilet_modal.gd" id="9_fa2lb"]
[ext_resource type="Script" uid="uid://dh1xoy4otfh5s" path="res://Сцени/closed_modal.gd" id="10_t6sle"]
[ext_resource type="Texture2D" uid="uid://cxx1ufi75jlp7" path="res://Другое/Закрито.jpeg" id="11_o7ip1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qnjqk"]
size = Vector2(18, 258.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yjim0"]
size = Vector2(2690.625, 18.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rj0wx"]
size = Vector2(2699, 6.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t6sle"]
size = Vector2(13, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkmm6"]
atlas = ExtResource("3_eui5g")
region = Rect2(0, 0, 96, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_lp4no"]
atlas = ExtResource("3_eui5g")
region = Rect2(96, 0, 96, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkxsu"]
atlas = ExtResource("3_eui5g")
region = Rect2(192, 0, 96, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbwvu"]
atlas = ExtResource("3_eui5g")
region = Rect2(288, 0, 96, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_m54cn"]
atlas = ExtResource("3_eui5g")
region = Rect2(384, 0, 96, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqrss"]
atlas = ExtResource("3_eui5g")
region = Rect2(480, 0, 96, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwdo1"]
atlas = ExtResource("3_eui5g")
region = Rect2(576, 0, 96, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gkhs"]
atlas = ExtResource("3_eui5g")
region = Rect2(672, 0, 96, 166)

[sub_resource type="SpriteFrames" id="SpriteFrames_y3kvp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkmm6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lp4no")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkxsu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbwvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m54cn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqrss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwdo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gkhs")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ar3tf"]
size = Vector2(75, 22.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eroqo"]
size = Vector2(112, 217.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0aw75"]
size = Vector2(169, 219)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y3kvp"]
size = Vector2(114, 214.75)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t6sle"]
texture = ExtResource("9_0jltq")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o7ip1"]

[node name="1этажналева" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-67.000244, 341)
scale = Vector2(1.289, 1.329)
texture = ExtResource("1_4imed")

[node name="RoadWalls" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="LeftWall" type="CollisionShape2D" parent="RoadWalls"]
position = Vector2(-1405, 598.25)
shape = SubResource("RectangleShape2D_qnjqk")

[node name="TopWall" type="CollisionShape2D" parent="RoadWalls"]
position = Vector2(-67.6875, 462.75)
shape = SubResource("RectangleShape2D_yjim0")

[node name="BottomWall" type="CollisionShape2D" parent="RoadWalls"]
position = Vector2(-66.5, 718.25)
shape = SubResource("RectangleShape2D_rj0wx")

[node name="RightWall" type="Area2D" parent="RoadWalls"]
script = ExtResource("2_t6sle")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoadWalls/RightWall"]
position = Vector2(1271.5, 585)
shape = SubResource("RectangleShape2D_t6sle")

[node name="Actors" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Player" type="CharacterBody2D" parent="Actors"]
z_index = 2
position = Vector2(1151, 472)
collision_mask = 6
script = ExtResource("2_flltc")
speed = 200.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Actors/Player"]
position = Vector2(9, 36.99999)
scale = Vector2(1.4010404, 1.3855424)
sprite_frames = SubResource("SpriteFrames_y3kvp")
animation = &"idle"
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Actors/Player"]
position = Vector2(-7, 127)
shape = SubResource("RectangleShape2D_ar3tf")

[node name="Camera2D" type="Camera2D" parent="Actors/Player"]
position = Vector2(0.49975586, -58)
limit_left = -1404
limit_top = -19
limit_right = 1278
limit_bottom = 714
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="Interactables" type="Node2D" parent="."]

[node name="ToiletDoor" type="Area2D" parent="Interactables"]
position = Vector2(-1281, 316)
script = ExtResource("4_eui5g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactables/ToiletDoor"]
position = Vector2(-20, 48.125)
shape = SubResource("RectangleShape2D_eroqo")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Interactables/ToiletDoor"]
position = Vector2(144, 50)
shape = SubResource("RectangleShape2D_eroqo")

[node name="ArrowUp" type="Area2D" parent="Interactables"]
position = Vector2(930, 350)
script = ExtResource("6_t6sle")
target_scene = "res://Сцени/зона_отдыха.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactables/ArrowUp"]
position = Vector2(1, -9)
shape = SubResource("RectangleShape2D_0aw75")

[node name="ClosedDoor" type="Area2D" parent="Interactables"]
position = Vector2(-265, -288)
script = ExtResource("6_0jltq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactables/ClosedDoor"]
position = Vector2(-5, 653)
shape = SubResource("RectangleShape2D_y3kvp")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Interactables/ClosedDoor"]
position = Vector2(229, 650)
shape = SubResource("RectangleShape2D_y3kvp")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Interactables/ClosedDoor"]
position = Vector2(456, 656)
shape = SubResource("RectangleShape2D_y3kvp")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Interactables/ClosedDoor"]
position = Vector2(1383, 640)
shape = SubResource("RectangleShape2D_y3kvp")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_0jltq")

[node name="ToiletModal" type="Control" parent="UI/HUD"]
visible = false
anchors_preset = 0
offset_left = -33.0
offset_top = 37.0
offset_right = 1176.0
offset_bottom = 705.0
script = ExtResource("9_fa2lb")

[node name="Panel" type="Panel" parent="UI/HUD/ToiletModal"]
layout_mode = 0
offset_left = 89.0
offset_top = -17.0
offset_right = 1145.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxTexture_t6sle")

[node name="CloseBtn" type="Button" parent="UI/HUD/ToiletModal/Panel"]
layout_mode = 0
offset_left = 945.0
offset_top = 19.0
offset_right = 1035.0
offset_bottom = 97.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0.39215687, 0.4627451, 0.49019608, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_o7ip1")
text = "✕"

[node name="ClosedModal" type="Control" parent="UI/HUD"]
anchors_preset = 0
offset_right = 1264.0
offset_bottom = 710.0
script = ExtResource("10_t6sle")

[node name="Panel" type="Panel" parent="UI/HUD/ClosedModal"]
layout_mode = 0
offset_left = 86.0
offset_top = 66.0
offset_right = 1159.0
offset_bottom = 560.0

[node name="Закрито" type="Sprite2D" parent="UI/HUD/ClosedModal/Panel"]
position = Vector2(540, 202)
scale = Vector2(1.3000001, 0.99999994)
texture = ExtResource("11_o7ip1")

[node name="Label" type="Label" parent="UI/HUD/ClosedModal/Panel"]
layout_mode = 0
offset_left = 201.0
offset_top = 324.0
offset_right = 943.0
offset_bottom = 393.0
theme_override_font_sizes/font_size = 50
text = "ЦЯ ЛОКАЦЯ ЩЕ НЕДОСТУПНА"

[node name="Label" type="Label" parent="UI/HUD/ClosedModal/Panel/Label"]
layout_mode = 0
offset_left = 68.0
offset_top = 84.0
offset_right = 647.0
offset_bottom = 132.0
theme_override_font_sizes/font_size = 30
text = "Вступай в коледж та дізнайся що там)"

[node name="CloseBtn" type="Button" parent="UI/HUD/ClosedModal/Panel"]
layout_mode = 0
offset_left = 951.0
offset_top = 13.0
offset_right = 1041.0
offset_bottom = 91.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0.39215687, 0.4627451, 0.49019608, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_o7ip1")
text = "✕"
